# ecomopti

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run_api.py  run_dashboard.py
src/ecomopti/phase1/: README.md  config.py  pipeline.py  preprocess.py  requirements-dev.txt  requirements.txt  schemas.py
src/ecomopti/phase2/: README.md  __init__.py  build.py  config.py  data_loader.py  eval_clv.py  eval_cox.py  eval_rsf.py  metrics.py  plots.py  requirements-dev.txt  requirements.txt  train_clv_model.py  train_cox.py  train_rsf.py  utils.py
src/ecomopti/phase3/: README.md  build.py  config.py  diagnostics.py  estimate_propensity.py  eval_uplift.py  generate_semi_synthetic.py  loader.py  metrics_uplift.py  plots.py  preprocessing.py  requirements-dev.txt  requirements.txt  train_uplift.py  utils.py
src/ecomopti/phase4/: README.md  __init__.py  build.py  config.py  cost_model.py  evaluator.py  loader.py  optimizer.py  plots.py  reports.py  requirements-dev.txt  requirements.txt
src/ecomopti/phase5/: README.md  main.py  requirements-dev.txt  requirements.txt
src/ecomopti/phase6/: README.md  app.py  plotly_factory.py  requirements-dev.txt  requirements.txt
tests/: test_phase1.py  test_phase2.py
